@@ -24,7 +24,6 @@ import os, sys
 from cylc import cylc_mode
 from optparse import OptionParser
 from cylc.task_message import message
-from cylc.locking.task_lock import task_lock
 
 usage = """cylc [task] failed [OPTIONS] [REASON]
 
@@ -71,6 +70,7 @@ except KeyError:
 
 # release task lock if using the lockserver
 if not cylc_mode.mode().is_raw():
+    from cylc.locking.task_lock import task_lock
     try:
         if not task_lock().release():
             raise SystemExit( "Failed to release task lock" )
