@@ -20,7 +20,6 @@ import os, sys
 from cylc import cylc_mode
 from optparse import OptionParser
 from cylc.task_message import message
-from cylc.locking.task_lock import task_lock
 
 usage = """cylc [task] started [OPTIONS]
 
@@ -71,6 +70,7 @@ except Exception, x:
 
 # acquire a task lock if using the lockserver
 if not cylc_mode.mode().is_raw():
+    from cylc.locking.task_lock import task_lock
     try:
         if not task_lock().acquire():
             # (don't send task failed message - handled by trapping)
