@@ -897,3 +897,9 @@ submission methods.
 and error trapping sections so that it can make use of suite and task
 environment variables and cylc commands.  
 
++ The main cylc command interface no longer checks that Pyro is
+installed, but the commands that it do. Consequently Pyro does not have
+to be installed on a remote task host if you choose to use ssh
+messaging, and you can still work with suites - but not run them - if
+Pyro is not installed on the suite host.
+
